# processor-descriptor

./: .flake8  LICENSE  README.md  pyproject.toml
pd/: isa.py  mmio.py
pd/model/riscv/python/: datatype.py  defs.py  instruction.py  instructionA.py  instructionB.py  instructionC.py  instructionD.py  instructionF.py  instructionI.py  instructionM.py  instructionQ.py  instructionType.py  instructionV.py  instructionZawrs.py  instructionZfh.py  instructionZicsr.py  instructionZifencei.py  isa.py  memory.py  register.py
pd/model/tinycpu/python/: instruction.py  memory.py  memorymap.py  register.py  test_decode.py
test/model/riscv/: test_decode.py  test_disassemble.py  test_sim_ia.py
